--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Fragment transaction</string>
     <string name="a">A</string>
     <string name="rmv_frg">remove fragment</string>
+    <string name="b">B</string>
+    <string name="go_to_b">go to b</string>
 </resources>
