--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="rmv_frg">remove fragment</string>
     <string name="b">B</string>
     <string name="go_to_b">go to b</string>
+    <string name="c">C</string>
 </resources>
